remove min-height to prevent image distortion when it hits below a certain window size

--- a/sass/components/_files.scss
+++ b/sass/components/_files.scss
@@ -188,8 +188,6 @@
 
             img {
                 @include single-transition(all, .1s, linear);
-                min-height: 50px;
-                min-width: 50px;
 
                 &.min-preview {
                     max-height: 50px;
